// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentContainer Component fetches comments on mount 1`] = `
<div
  className="comments"
>
  <button
    className="btn btn-link mt1 mb1 link-subtle"
    id="comment-toggle"
    onClick={[Function]}
    style={
      Object {
        "marginLeft": 55,
        "paddingLeft": 0,
        "position": "relative",
      }
    }
  >
    <span
      className={undefined}
      style={
        Object {
          "color": "black",
          "position": "relative",
        }
      }
    >
      <span
        className="glyphicon glyphicon-comment"
        style={
          Object {
            "fontSize": 24,
            "verticalAlign": "middle",
          }
        }
      />
      <span
        className="number"
        style={
          Object {
            "color": "white",
            "fontSize": 11,
            "fontWeight": "normal",
            "left": 0,
            "position": "absolute",
            "textAlign": "center",
            "top": "50%",
            "transform": "translateY(-50%)",
            "width": "100%",
          }
        }
      >
        0
      </span>
    </span>
    <span
      className="ml1"
    >
      Vis alle kommentarer
    </span>
  </button>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <span
      className="profile-image small round"
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
    >
      <img
        alt={undefined}
        className="cover"
        src="/v1/image/image_id/200/200"
      />
    </span>
     
    <div
      className="ml2 form-group "
      onFocus={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <textarea
        className="form-control mb1 comment-textarea"
        disabled={undefined}
        name="list-description"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Skriv kommentar"
        value=""
      />
      
      <div
        className="tr"
        style={
          Object {
            "height": "0px",
            "opacity": 0,
            "overflow": "hidden",
            "transition": "height 200ms, opacity 200ms",
          }
        }
      >
        <button
          className="btn -btn-link link-subtle"
          onClick={[Function]}
        >
          Fortryd
        </button>
        <button
          className="btn btn-success"
          disabled={true}
          id="comment-submit"
          onClick={[Function]}
        >
          Gem
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Component renders a list of comments 1`] = `
<div
  className="comments"
>
  <div
    style={
      Object {
        "height": null,
        "overflow": "hidden",
        "transition": "height 500ms",
      }
    }
  >
    <div>
      <div
        className="comment-wrapper"
      >
        
        <div
          className="flex mb2"
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <span
            className="profile-image small round"
            style={
              Object {
                "flexShrink": 0,
                "height": "35px",
                "width": "35px",
              }
            }
          >
            <span
              className="glyphicon glyphicon-user"
              style={
                Object {
                  "fontSize": "17.5px",
                }
              }
            />
          </span>
          <div
            className="ml2"
            style={
              Object {
                "flexGrow": 1,
              }
            }
          >
            <div
              className="comment-author"
            >
              Benny Cosmos
            </div>
            <div
              className="comment-time mb1"
            >
              Lige nu
            </div>
            <div
              className="comment"
            >
              comment1
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="btn btn-link mt1 mb1 link-subtle"
    id="comment-toggle"
    onClick={[Function]}
    style={
      Object {
        "marginLeft": 55,
        "paddingLeft": 0,
        "position": "relative",
      }
    }
  >
    <span
      className={undefined}
      style={
        Object {
          "color": "black",
          "position": "relative",
        }
      }
    >
      <span
        className="glyphicon glyphicon-comment"
        style={
          Object {
            "fontSize": 24,
            "verticalAlign": "middle",
          }
        }
      />
      <span
        className="number"
        style={
          Object {
            "color": "white",
            "fontSize": 11,
            "fontWeight": "normal",
            "left": 0,
            "position": "absolute",
            "textAlign": "center",
            "top": "50%",
            "transform": "translateY(-50%)",
            "width": "100%",
          }
        }
      >
        2
      </span>
    </span>
    <span
      className="ml1"
    >
      Vis alle kommentarer
    </span>
  </button>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <span
      className="profile-image small round"
      style={
        Object {
          "height": "35px",
          "width": "35px",
        }
      }
    >
      <img
        alt={undefined}
        className="cover"
        src="/v1/image/image_id/200/200"
      />
    </span>
     
    <div
      className="ml2 form-group "
      onFocus={[Function]}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <textarea
        className="form-control mb1 comment-textarea"
        disabled={undefined}
        name="list-description"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Skriv kommentar"
        value=""
      />
      
      <div
        className="tr"
        style={
          Object {
            "height": "0px",
            "opacity": 0,
            "overflow": "hidden",
            "transition": "height 200ms, opacity 200ms",
          }
        }
      >
        <button
          className="btn -btn-link link-subtle"
          onClick={[Function]}
        >
          Fortryd
        </button>
        <button
          className="btn btn-success"
          disabled={true}
          id="comment-submit"
          onClick={[Function]}
        >
          Gem
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Component renders all comments 1`] = `
<CommentContainer
  comments={
    Object {
      "comments": Array [
        Object {
          "_id": "0",
          "comment": "comment0",
        },
        Object {
          "_id": "1",
          "comment": "comment1",
        },
        Object {
          "_id": "2",
          "comment": "comment2",
        },
        Object {
          "_id": "3",
          "comment": "comment3",
        },
        Object {
          "_id": "4",
          "comment": "comment4",
        },
      ],
    }
  }
  fetchComments={[Function]}
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    className="comments"
  >
    <CommentList
      comments={
        Array [
          Object {
            "_id": "0",
            "comment": "comment0",
          },
          Object {
            "_id": "1",
            "comment": "comment1",
          },
          Object {
            "_id": "2",
            "comment": "comment2",
          },
          Object {
            "_id": "3",
            "comment": "comment3",
          },
          Object {
            "_id": "4",
            "comment": "comment4",
          },
        ]
      }
      showCount={5}
    >
      <div
        style={
          Object {
            "height": null,
            "overflow": "hidden",
            "transition": "height 500ms",
          }
        }
      >
        <div>
          <div
            className="comment-wrapper"
            key="0"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment0
                </div>
              </div>
            </div>
          </div>
          <div
            className="comment-wrapper"
            key="1"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment1
                </div>
              </div>
            </div>
          </div>
          <div
            className="comment-wrapper"
            key="2"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment2
                </div>
              </div>
            </div>
          </div>
          <div
            className="comment-wrapper"
            key="3"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment3
                </div>
              </div>
            </div>
          </div>
          <div
            className="comment-wrapper"
            key="4"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment4
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </CommentList>
    <button
      className="btn btn-link mt1 mb1 link-subtle"
      id="comment-toggle"
      onClick={[Function]}
      style={
        Object {
          "marginLeft": 55,
          "paddingLeft": 0,
          "position": "relative",
        }
      }
    >
      <Component
        value={5}
      >
        <span
          style={
            Object {
              "color": "black",
              "position": "relative",
            }
          }
        >
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "fontSize": 24,
                "verticalAlign": "middle",
              }
            }
          />
          <span
            className="number"
            style={
              Object {
                "color": "white",
                "fontSize": 11,
                "fontWeight": "normal",
                "left": 0,
                "position": "absolute",
                "textAlign": "center",
                "top": "50%",
                "transform": "translateY(-50%)",
                "width": "100%",
              }
            }
          >
            5
          </span>
        </span>
      </Component>
      <span
        className="ml1"
      >
        Vis færre kommentarer
      </span>
    </button>
    <CommentInput
      error={null}
      onChange={[Function]}
      onSubmit={[Function]}
      user={
        Object {
          "image": "image_id",
        }
      }
      value=""
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <CommentUserImage
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <span
            className="profile-image small round"
            style={
              Object {
                "height": "35px",
                "width": "35px",
              }
            }
          >
            <img
              className="cover"
              src="/v1/image/image_id/200/200"
            />
          </span>
        </CommentUserImage>
         
        <div
          className="ml2 form-group "
          onFocus={[Function]}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <textarea
            className="form-control mb1 comment-textarea"
            name="list-description"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Skriv kommentar"
            value=""
          />
          <div
            className="tr"
            style={
              Object {
                "height": "0px",
                "opacity": 0,
                "overflow": "hidden",
                "transition": "height 200ms, opacity 200ms",
              }
            }
          >
            <button
              className="btn -btn-link link-subtle"
              onClick={[Function]}
            >
              Fortryd
            </button>
            <button
              className="btn btn-success"
              disabled={true}
              id="comment-submit"
              onClick={[Function]}
            >
              Gem
            </button>
          </div>
        </div>
      </div>
    </CommentInput>
  </div>
</CommentContainer>
`;

exports[`CommentContainer Component renders error 1`] = `
<CommentContainer
  comments={
    Object {
      "comments": Array [
        Object {
          "_id": "0",
          "comment": "comment0",
        },
        Object {
          "_id": "1",
          "comment": "comment1",
        },
      ],
      "error": Object {
        "comment": "comment3",
        "error": "some error occures",
      },
    }
  }
  fetchComments={[Function]}
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    className="comments"
  >
    <CommentList
      comments={
        Array [
          Object {
            "_id": "0",
            "comment": "comment0",
          },
          Object {
            "_id": "1",
            "comment": "comment1",
          },
        ]
      }
      showCount={1}
    >
      <div
        style={
          Object {
            "height": null,
            "overflow": "hidden",
            "transition": "height 500ms",
          }
        }
      >
        <div>
          <div
            className="comment-wrapper"
            key="1"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment1
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </CommentList>
    <button
      className="btn btn-link mt1 mb1 link-subtle"
      id="comment-toggle"
      onClick={[Function]}
      style={
        Object {
          "marginLeft": 55,
          "paddingLeft": 0,
          "position": "relative",
        }
      }
    >
      <Component
        value={2}
      >
        <span
          style={
            Object {
              "color": "black",
              "position": "relative",
            }
          }
        >
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "fontSize": 24,
                "verticalAlign": "middle",
              }
            }
          />
          <span
            className="number"
            style={
              Object {
                "color": "white",
                "fontSize": 11,
                "fontWeight": "normal",
                "left": 0,
                "position": "absolute",
                "textAlign": "center",
                "top": "50%",
                "transform": "translateY(-50%)",
                "width": "100%",
              }
            }
          >
            2
          </span>
        </span>
      </Component>
      <span
        className="ml1"
      >
        Vis alle kommentarer
      </span>
    </button>
    <CommentInput
      error={
        Object {
          "comment": "comment3",
          "error": "some error occures",
        }
      }
      onChange={[Function]}
      onSubmit={[Function]}
      user={
        Object {
          "image": "image_id",
        }
      }
      value="comment3"
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <CommentUserImage
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <span
            className="profile-image small round"
            style={
              Object {
                "height": "35px",
                "width": "35px",
              }
            }
          >
            <img
              className="cover"
              src="/v1/image/image_id/200/200"
            />
          </span>
        </CommentUserImage>
         
        <div
          className="ml2 form-group has-error"
          onFocus={[Function]}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <textarea
            className="form-control mb1 comment-textarea"
            name="list-description"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Skriv kommentar"
            value="comment3"
          />
          <div
            className="error"
          >
            some error occures
          </div>
          <div
            className="tr"
            style={
              Object {
                "height": "0px",
                "opacity": 0,
                "overflow": "hidden",
                "transition": "height 200ms, opacity 200ms",
              }
            }
          >
            <button
              className="btn -btn-link link-subtle"
              onClick={[Function]}
            >
              Fortryd
            </button>
            <button
              className="btn btn-success"
              disabled={false}
              id="comment-submit"
              onClick={[Function]}
            >
              Gem
            </button>
          </div>
        </div>
      </div>
    </CommentInput>
  </div>
</CommentContainer>
`;

exports[`CommentContainer Component renders saving overlay 1`] = `
<CommentContainer
  comments={
    Object {
      "comments": Array [
        Object {
          "_id": "0",
          "comment": "comment0",
        },
        Object {
          "_id": "1",
          "comment": "comment1",
        },
        Object {
          "_id": "new_comment",
          "comment": "comment new",
          "saving": true,
        },
      ],
    }
  }
  fetchComments={[Function]}
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    className="comments"
  >
    <CommentList
      comments={
        Array [
          Object {
            "_id": "0",
            "comment": "comment0",
          },
          Object {
            "_id": "1",
            "comment": "comment1",
          },
          Object {
            "_id": "new_comment",
            "comment": "comment new",
            "saving": true,
          },
        ]
      }
      showCount={1}
    >
      <div
        style={
          Object {
            "height": null,
            "overflow": "hidden",
            "transition": "height 500ms",
          }
        }
      >
        <div>
          <div
            className="comment-wrapper"
            key="new_comment"
          >
            <div
              className="comment-saving"
            >
              <Spinner
                size="30px"
              >
                <span
                  className="spinner"
                  style={
                    Object {
                      "borderTopColor": null,
                      "display": "inline-block",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                />
              </Spinner>
            </div>
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment new
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </CommentList>
    <button
      className="btn btn-link mt1 mb1 link-subtle"
      id="comment-toggle"
      onClick={[Function]}
      style={
        Object {
          "marginLeft": 55,
          "paddingLeft": 0,
          "position": "relative",
        }
      }
    >
      <Component
        value={3}
      >
        <span
          style={
            Object {
              "color": "black",
              "position": "relative",
            }
          }
        >
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "fontSize": 24,
                "verticalAlign": "middle",
              }
            }
          />
          <span
            className="number"
            style={
              Object {
                "color": "white",
                "fontSize": 11,
                "fontWeight": "normal",
                "left": 0,
                "position": "absolute",
                "textAlign": "center",
                "top": "50%",
                "transform": "translateY(-50%)",
                "width": "100%",
              }
            }
          >
            3
          </span>
        </span>
      </Component>
      <span
        className="ml1"
      >
        Vis alle kommentarer
      </span>
    </button>
    <CommentInput
      error={null}
      onChange={[Function]}
      onSubmit={[Function]}
      user={
        Object {
          "image": "image_id",
        }
      }
      value=""
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <CommentUserImage
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <span
            className="profile-image small round"
            style={
              Object {
                "height": "35px",
                "width": "35px",
              }
            }
          >
            <img
              className="cover"
              src="/v1/image/image_id/200/200"
            />
          </span>
        </CommentUserImage>
         
        <div
          className="ml2 form-group "
          onFocus={[Function]}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <textarea
            className="form-control mb1 comment-textarea"
            name="list-description"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Skriv kommentar"
            value=""
          />
          <div
            className="tr"
            style={
              Object {
                "height": "0px",
                "opacity": 0,
                "overflow": "hidden",
                "transition": "height 200ms, opacity 200ms",
              }
            }
          >
            <button
              className="btn -btn-link link-subtle"
              onClick={[Function]}
            >
              Fortryd
            </button>
            <button
              className="btn btn-success"
              disabled={true}
              id="comment-submit"
              onClick={[Function]}
            >
              Gem
            </button>
          </div>
        </div>
      </div>
    </CommentInput>
  </div>
</CommentContainer>
`;

exports[`CommentContainer Toggle all comments 1`] = `
<CommentContainer
  comments={
    Object {
      "comments": Array [
        Object {
          "_id": "0",
          "comment": "comment0",
        },
        Object {
          "_id": "1",
          "comment": "comment1",
        },
        Object {
          "_id": "2",
          "comment": "comment2",
        },
        Object {
          "_id": "3",
          "comment": "comment3",
        },
        Object {
          "_id": "4",
          "comment": "comment4",
        },
      ],
    }
  }
  fetchComments={[Function]}
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    className="comments"
  >
    <CommentList
      comments={
        Array [
          Object {
            "_id": "0",
            "comment": "comment0",
          },
          Object {
            "_id": "1",
            "comment": "comment1",
          },
          Object {
            "_id": "2",
            "comment": "comment2",
          },
          Object {
            "_id": "3",
            "comment": "comment3",
          },
          Object {
            "_id": "4",
            "comment": "comment4",
          },
        ]
      }
      showCount={1}
    >
      <div
        style={
          Object {
            "height": null,
            "overflow": "hidden",
            "transition": "height 500ms",
          }
        }
      >
        <div>
          <div
            className="comment-wrapper"
            key="4"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment4
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </CommentList>
    <button
      className="btn btn-link mt1 mb1 link-subtle"
      id="comment-toggle"
      onClick={[Function]}
      style={
        Object {
          "marginLeft": 55,
          "paddingLeft": 0,
          "position": "relative",
        }
      }
    >
      <Component
        value={5}
      >
        <span
          style={
            Object {
              "color": "black",
              "position": "relative",
            }
          }
        >
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "fontSize": 24,
                "verticalAlign": "middle",
              }
            }
          />
          <span
            className="number"
            style={
              Object {
                "color": "white",
                "fontSize": 11,
                "fontWeight": "normal",
                "left": 0,
                "position": "absolute",
                "textAlign": "center",
                "top": "50%",
                "transform": "translateY(-50%)",
                "width": "100%",
              }
            }
          >
            5
          </span>
        </span>
      </Component>
      <span
        className="ml1"
      >
        Vis alle kommentarer
      </span>
    </button>
    <CommentInput
      error={null}
      onChange={[Function]}
      onSubmit={[Function]}
      user={
        Object {
          "image": "image_id",
        }
      }
      value=""
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <CommentUserImage
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <span
            className="profile-image small round"
            style={
              Object {
                "height": "35px",
                "width": "35px",
              }
            }
          >
            <img
              className="cover"
              src="/v1/image/image_id/200/200"
            />
          </span>
        </CommentUserImage>
         
        <div
          className="ml2 form-group "
          onFocus={[Function]}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <textarea
            className="form-control mb1 comment-textarea"
            name="list-description"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Skriv kommentar"
            value=""
          />
          <div
            className="tr"
            style={
              Object {
                "height": "0px",
                "opacity": 0,
                "overflow": "hidden",
                "transition": "height 200ms, opacity 200ms",
              }
            }
          >
            <button
              className="btn -btn-link link-subtle"
              onClick={[Function]}
            >
              Fortryd
            </button>
            <button
              className="btn btn-success"
              disabled={true}
              id="comment-submit"
              onClick={[Function]}
            >
              Gem
            </button>
          </div>
        </div>
      </div>
    </CommentInput>
  </div>
</CommentContainer>
`;

exports[`CommentContainer Toggle all comments 2`] = `
<CommentContainer
  comments={
    Object {
      "comments": Array [
        Object {
          "_id": "0",
          "comment": "comment0",
        },
        Object {
          "_id": "1",
          "comment": "comment1",
        },
        Object {
          "_id": "2",
          "comment": "comment2",
        },
        Object {
          "_id": "3",
          "comment": "comment3",
        },
        Object {
          "_id": "4",
          "comment": "comment4",
        },
      ],
    }
  }
  fetchComments={[Function]}
  id="some_id"
  user={
    Object {
      "image": "image_id",
    }
  }
>
  <div
    className="comments"
  >
    <CommentList
      comments={
        Array [
          Object {
            "_id": "0",
            "comment": "comment0",
          },
          Object {
            "_id": "1",
            "comment": "comment1",
          },
          Object {
            "_id": "2",
            "comment": "comment2",
          },
          Object {
            "_id": "3",
            "comment": "comment3",
          },
          Object {
            "_id": "4",
            "comment": "comment4",
          },
        ]
      }
      showCount={5}
    >
      <div
        style={
          Object {
            "height": null,
            "overflow": "hidden",
            "transition": "height 500ms",
          }
        }
      >
        <div>
          <div
            className="comment-wrapper"
            key="0"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment0
                </div>
              </div>
            </div>
          </div>
          <div
            className="comment-wrapper"
            key="1"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment1
                </div>
              </div>
            </div>
          </div>
          <div
            className="comment-wrapper"
            key="2"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment2
                </div>
              </div>
            </div>
          </div>
          <div
            className="comment-wrapper"
            key="3"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment3
                </div>
              </div>
            </div>
          </div>
          <div
            className="comment-wrapper"
            key="4"
          >
            <div
              className="flex mb2"
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <CommentUserImage
                style={
                  Object {
                    "flexShrink": 0,
                  }
                }
                user={
                  Object {
                    "name": "Benny Cosmos",
                  }
                }
              >
                <span
                  className="profile-image small round"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "35px",
                      "width": "35px",
                    }
                  }
                >
                  <span
                    className="glyphicon glyphicon-user"
                    style={
                      Object {
                        "fontSize": "17.5px",
                      }
                    }
                  />
                </span>
              </CommentUserImage>
              <div
                className="ml2"
                style={
                  Object {
                    "flexGrow": 1,
                  }
                }
              >
                <div
                  className="comment-author"
                >
                  Benny Cosmos
                </div>
                <div
                  className="comment-time mb1"
                >
                  Lige nu
                </div>
                <div
                  className="comment"
                >
                  comment4
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </CommentList>
    <button
      className="btn btn-link mt1 mb1 link-subtle"
      id="comment-toggle"
      onClick={[Function]}
      style={
        Object {
          "marginLeft": 55,
          "paddingLeft": 0,
          "position": "relative",
        }
      }
    >
      <Component
        value={5}
      >
        <span
          style={
            Object {
              "color": "black",
              "position": "relative",
            }
          }
        >
          <span
            className="glyphicon glyphicon-comment"
            style={
              Object {
                "fontSize": 24,
                "verticalAlign": "middle",
              }
            }
          />
          <span
            className="number"
            style={
              Object {
                "color": "white",
                "fontSize": 11,
                "fontWeight": "normal",
                "left": 0,
                "position": "absolute",
                "textAlign": "center",
                "top": "50%",
                "transform": "translateY(-50%)",
                "width": "100%",
              }
            }
          >
            5
          </span>
        </span>
      </Component>
      <span
        className="ml1"
      >
        Vis færre kommentarer
      </span>
    </button>
    <CommentInput
      error={null}
      onChange={[Function]}
      onSubmit={[Function]}
      user={
        Object {
          "image": "image_id",
        }
      }
      value=""
    >
      <div
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <CommentUserImage
          user={
            Object {
              "image": "image_id",
            }
          }
        >
          <span
            className="profile-image small round"
            style={
              Object {
                "height": "35px",
                "width": "35px",
              }
            }
          >
            <img
              className="cover"
              src="/v1/image/image_id/200/200"
            />
          </span>
        </CommentUserImage>
         
        <div
          className="ml2 form-group "
          onFocus={[Function]}
          style={
            Object {
              "width": "100%",
            }
          }
        >
          <textarea
            className="form-control mb1 comment-textarea"
            name="list-description"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Skriv kommentar"
            value=""
          />
          <div
            className="tr"
            style={
              Object {
                "height": "0px",
                "opacity": 0,
                "overflow": "hidden",
                "transition": "height 200ms, opacity 200ms",
              }
            }
          >
            <button
              className="btn -btn-link link-subtle"
              onClick={[Function]}
            >
              Fortryd
            </button>
            <button
              className="btn btn-success"
              disabled={true}
              id="comment-submit"
              onClick={[Function]}
            >
              Gem
            </button>
          </div>
        </div>
      </div>
    </CommentInput>
  </div>
</CommentContainer>
`;
